Add btnDownload (not working)
Remove extra params in functions, optimized SongTracklistItem constructor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,8 @@ qt_add_executable(appPteitMusic
     songtracklistitem.h songtracklistitem.cpp
     scrollabletracklist.h scrollabletracklist.cpp
     likespagewidget.h likespagewidget.cpp
+    downloadpagewidget.h downloadpagewidget.cpp
+    MusicGlobals.h
 )
 
 # Подключаем заголовочные файлы
